--- a/src/apps/torqueAndDrag/frictionFactor/FrictionFactorApp.css
+++ b/src/apps/torqueAndDrag/frictionFactor/FrictionFactorApp.css
@@ -4,12 +4,19 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
-.c-tnd-friction-factor__factor {
+
+.c-tnd-friction-factor__factor-box {
   margin-top: 19px;
 
 }
+
+.c-tnd-friction-factor__factor {
+  margin-bottom: 5px;
+}
+
 
 .c-tnd-friction-factor__factor .c-tnd-friction-factor__label {
   margin-top: 1px;
@@ -18,6 +25,7 @@
 .c-tnd-friction-factor__factor .c-tnd-friction-factor__label label {
   font-size: 1rem;
   font-weight: bold;
+  color: #FFFFFF;
 }
 
 .c-tnd-friction-factor__factor input.c-tnd-friction-factor__input {
@@ -30,7 +38,8 @@
 }
 
 .c-tnd-friction-factor__predicted {
-  font-size: 1rem;
-  padding: 1.5rem 0;
+  font-size: 0.8rem;
+  padding: 1rem 0;
+  opacity: 0.7;
   color: rgb(200, 200, 200);
 }
